Updated to java 17 + updated dependencies